# fco-xplore

./: fco-xplore.cabal  runme.hs  stack.yaml
app/: Main.hs
src/: Doit.hs  Effects.hs  Logger.hs  Memo.hs  Parsing.hs  Rock.hs  Yapa.hs
src/Messaging/: ForthProxy.hs
src/Xplore/: Extensible.hs  Misc.hs  PipesTut.hs  Service.hs
test/Xplore/: ServiceSpec.hs
