name:                 fco-xplore
version:              0.1.0.0
synopsis:             explore variuos Haskell idioms and patterns
description:          see README.md
homepage:             http://www.functionalconcepts.org
license:              MIT
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            Copyright (C) 2017 functionalconcepts.org team
category:             Miscellaneous
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Doit
                    , Effects
                    , Logger
                    , Memo
                    , Rock
                    --, Parsing
                    , Xplore.Extensible
                    , Xplore.PipesTut
                    , Yapa
                    , Data.String.Strip
  build-depends:      base >= 4.7 && < 5
                    , base-compat
                    , basic-prelude
                    , containers
                    , deepseq
                    , extensible-effects
                    , megaparsec
                    , reactive-banana
                    , text
                    -- , distributed-process
                    -- , distributed-process-simplelocalnet
                    , network
                    , network-transport-tcp
                    , pipes
                    , QuickCheck
  default-language:   Haskell2010

executable fco-xplore
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-xplore
  default-language:   Haskell2010

test-suite fco-xplore-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , fco-xplore
                    , hspec
                    , QuickCheck
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-xplore
